# rag-based-personal-chatbot

./: .gitignore  gitinfo.txt  gitstatus.txt  pyproject.toml  streamlit_app.py
backend/: api.py  utils.py
backend/data/docs/: google.txt
backend/rag/: chain.py  history.py  ingestion.py  loader.py  prompts.py  retriever.py  summarizer.py
backend/rag/summaries/: NIPS-2017-attention-is-all-you-need-Paper.md  google.md
