[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-mongodb>=0.11.0",
    "langchain-nvidia-ai-endpoints>=1.3.0",
    "langchain-openai>=1.2.1",
    "langchain-weaviate>=0.0.6",
    "pymongo>=4.17.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
    "weaviate-client>=4.21.0",
]
